# RemotePlay

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_STREAMING_REPORT.md  CLIENT_CRASH_AUDIT.md  CMakeLists.txt  CPP_BLUEPRINT.md  DESIGN.md  DESIGN_SYSTEM.md  ENCODER_DECODER_POLICIES.md  FINAL_PRODUCTION_READINESS_REPORT.md  FULL_AUDIT_REPORT.md  HOW_IT_WORKS_FA.md  IMPLEMENTATION_PLAN.md  LOCAL_TESTING_GUIDE_FA.md  MVP_READY_AUDIT_REPORT.md  NETWORKING_HARDENING.md  NexusDash_Architecture_Report.md  OPTIMIZATION.md  OPTIMIZATION_REPORT.md  PARSEC_LITE_REDESIGN.md  PERFORMANCE_AUDIT.md  PRODUCTION_AUDIT.md  PRODUCTION_READINESS_REPORT.md  PROJECT_ASSESSMENT_REPORT.md  README.md  README_FA.md  RELIABILITY_REPORT.md  RISKS_AND_LIMITATIONS.md  TECHNICAL_AUDIT.md  TECHNICAL_ROADMAP.md  UX_STRATEGY.md  autobuild.bat  capture_screenshot.py  client_app.py  host_app.py  mock_ui.html  package.bat  parsec-lite.manifest  requirements.txt  (+3 more)
CrashReports/: crash_2026-07-11_14-44-06.txt  crash_2026-07-11_14-52-13.txt
NexusDash/: CMakeLists.txt  README.md
NexusDash/qml/: main.qml
NexusDash/qml/components/: DashboardHeader.qml  NetworkStatusIndicator.qml  NexusButton.qml  NexusCard.qml  NexusComboBox.qml  NexusDialog.qml  NexusGraph.qml  NexusInput.qml  NexusNotification.qml  NexusSegmentedControl.qml  NexusTable.qml  Sidebar.qml  SidebarItem.qml
NexusDash/qml/pages/: AboutPage.qml  DashboardPage.qml  SettingsPage.qml
NexusDash/qml/theme/: Theme.qml
NexusDash/src/: main.cpp
NexusDash/src/core/: AppEngine.cpp  AppEngine.hpp
NexusDash/src/services/: SystemService.cpp  SystemService.hpp  ThemeService.cpp  ThemeService.hpp
ParsecLite.UI/: App.xaml  Program.cs
ParsecLite.UI/Services/: ParsecCoreService.cs
ParsecLite.UI/ViewModels/: MainViewModel.cs
ParsecLite.UI/Views/: MainWindow.xaml
ParsecLiteQt/: CMakeLists.txt  README.md
ParsecLiteQt/src/: main.cpp
ParsecLiteQt/src/core/: AppBridge.cpp  AppBridge.hpp
ParsecLiteQt/src/ui/: Style.qml  main.qml
ParsecLiteQt/src/ui/components/: Card.qml  CustomButton.qml  NavButton.qml
ParsecLiteQt/src/ui/pages/: About.qml  Dashboard.qml  Settings.qml
client/: client.py  receiver.py
common/: protocol.py
cpp/: README.md  benchmark_pipeline.cpp  fallback_test.cpp  main.cpp  stress_test.cpp  test_jb.cpp  test_pipeline_logic.cpp  tests_runner.cpp
cpp/ai/: cloud_optimizer.cpp  cloud_optimizer.hpp  input_predictor.cpp  input_predictor.hpp  intelligent_router.cpp  intelligent_router.hpp  latency_predictor.cpp  latency_predictor.hpp  stream_engine.cpp  stream_engine.hpp  tests_ai.cpp
cpp/client/: audio_decoder.cpp  audio_decoder.hpp  audio_decoder_ffmpeg.cpp  audio_decoder_ffmpeg.hpp  audio_jitter_buffer.cpp  audio_jitter_buffer.hpp  audio_renderer.cpp  audio_renderer.hpp  audio_renderer_wasapi.cpp  audio_renderer_wasapi.hpp  decoder_hw.cpp  decoder_hw.hpp  input_capture.cpp  input_capture.hpp  jitter_buffer.cpp  jitter_buffer.hpp  launcher.cpp  launcher.hpp  overlay.cpp  overlay.hpp  receiver.cpp  receiver.hpp  renderer_d3d11.cpp  renderer_d3d11.hpp  ui_system.cpp  ui_system.hpp
cpp/common/: audio_interfaces.hpp  clock_sync.hpp  config.cpp  config.hpp  crash_handler.cpp  crash_handler.hpp  crypto_manager.cpp  crypto_manager.hpp  fixed_ring_buffer.hpp  lock_free_queue.hpp  logger.cpp  logger.hpp  network_manager.cpp  network_manager.hpp  packet_pool.hpp  parsec_lite_api.cpp  parsec_lite_api.h  profiler.hpp  protocol.hpp  safe_queue.hpp  session_manager.cpp  session_manager.hpp
cpp/host/: audio_capture.cpp  audio_capture.hpp  audio_capture_wasapi.cpp  audio_capture_wasapi.hpp  audio_encoder.cpp  audio_encoder.hpp  audio_encoder_ffmpeg.cpp  audio_encoder_ffmpeg.hpp  capture_dxgi.cpp  capture_dxgi.hpp  encoder_hw.cpp  encoder_hw.hpp  encoder_manager.cpp  encoder_manager.hpp  input_injector.cpp  input_injector.hpp
deploy/docker/: Dockerfile
deploy/k8s/: relay.yaml  signaling.yaml
docs/: ERROR_HANDLING_ANALYSIS.md  PHASE2_ARCHITECTURE.md  PHASE2_WAN_HARDENING.md  PHASE3_CLOUD_SCALING_INFRASTRUCTURE.md  PHASE3_WAN_ARCHITECTURE.md  PHASE4_AI_OPTIMIZATION_LAYER.md  PHASE4_CLOUD_SCALING.md  PHASE5_AI_OPTIMIZATION.md  SECURITY_ARCHITECTURE_PHASE_1.md  STREAM_PROCESS_FA.md  ui-ux-modernization-audit.md
host/: injector.py  streamer.py
tests/: test_integration.py  test_protocol.py
